[tool.poetry]
name = "evnex-ha"
version = "0.4.1"
description = ""
authors = ["Brian Thorne <brian@thorne.link>"]

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.11"
evnex = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
